--- a/00-HTML-CSS-Bootstrap/02-CSS/CSS_Assessment.css
+++ b/00-HTML-CSS-Bootstrap/02-CSS/CSS_Assessment.css
@@ -5,20 +5,37 @@ Watch the video lecture for more info on this! */
 
 /*Task # 1
 Give the body element of the site a light gray background using HEX code*/
+body{
+  background: #D3D3D3;
+}
 
 /*Task # 2
 Change the h1 to have a 4px solid black border*/
 /* And center the text. */
+h1{
+  border: black;
+  border-width: 1px;
+  border-style: solid;
+  text-align: center;
+}
 
 
 
 /*Task # 3
 Make all h2 elements the color purple*/
+h2{
+  color: purple;
+}
 
 
 /*Task # 4
 Make all input tag boxes have a 5px solid darkblue border */
 /* https://www.w3schools.com/css/css_border.asp */
+input{
+  border: #0E124F;
+  border-width: 5px;
+  border-style: solid;
+}
 
 
 /*Task # 6
@@ -26,12 +43,26 @@ There is a textarea element with the id=textblock, give it the following propert
 * A 5px solid gray border
 * A width of 800px and a height of 400px
  */
+ #textblock{
+   border: gray;
+   border-width: 5px;
+   border-style: solid;
+   width: 800px;
+   height: 400px;
+
+ }
 
 
 /*Task # 7
 There is a link to Google on the page. Make this link red.*/
+a{
+  color:red
+}
 
 
 /*Task # 9
 Finally, set all the font to be Aldrich font (or any other Google Font) */
 /* https://fonts.google.com/?selection.family=Aldrich */
+body{
+  font-family: 'Aldrich', sans-serif;
+}
